--- a/database/.gitignore
+++ b/database/.gitignore
@@ -1,1 +1,17 @@
 *.sqlite*
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+npm-debug.log
+yarn-error.log
+/.idea
+/.vscode
+/storage/api-docs/api-docs.json
+public/mix-manifest.json
+
